--- a/scss/gtk-3.0/widgets/_levelbar.scss
+++ b/scss/gtk-3.0/widgets/_levelbar.scss
@@ -3,7 +3,7 @@
 levelbar {
   trough {
     block {
-      padding: 3px;
+      padding: 2px;
       border-radius: 3px;
 
       &.filled { background: colors.$pink-light; }
