--- a/scss/gtk-3.0/widgets/_menubar.scss
+++ b/scss/gtk-3.0/widgets/_menubar.scss
@@ -5,7 +5,7 @@ menubar {
   background: colors.$surface-strongest;
 
   menuitem {
-    padding: config.$spacing-medium;
+    padding: config.$spacing-small;
 
     &:hover {
       background: colors.$white-weakest;
