--- a/scss/gtk-3.0/widgets/_progressbar.scss
+++ b/scss/gtk-3.0/widgets/_progressbar.scss
@@ -4,13 +4,13 @@ progressbar {
   trough {
     background: colors.$white-weakest;
      border-radius: 1em;
-     min-height: 6px;
-     min-width: 6px;
+     min-height: 0.3em;
+     min-width: 0.3em;
     progress {
       background: colors.$yellow-light;
       border-radius: 1em;
-      min-height: 6px;
-      min-width: 6px;
+      min-height: 0.3em;
+      min-width: 0.3em;
     }
   }
 }
